item_detail.scss: fix wrong colors and stretched images
fixes #5615, #5597

--- a/meinberlin/assets/scss/components_user_facing/_item_detail.scss
+++ b/meinberlin/assets/scss/components_user_facing/_item_detail.scss
@@ -8,11 +8,17 @@
     
     img {
         aspect-ratio: 2/1;
+        object-fit: cover;
     }
 }
 
 .item-detail__user {
     padding-bottom: $spacer;
+    color: $text-light;
+
+    strong {
+        color: $text-base;
+    }
 }
 
 .item-detail .pill__list {
@@ -27,4 +33,9 @@
 
 .item-detail__reference {
     margin-bottom: $spacer;
+    color: $text-light;
+
+    strong {
+        color: $text-base;
+    }
 }
